--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html> <!-- 1. Defines the document type as HTML5 -->
 <html lang="en"> <!-- 2. Specifies the language of the document -->
 <head>
-    <meta ____="____-8"> <!-- 3. Defines character encoding for the document -->
+    <meta charset="UTF-8"> <!-- 3. Defines character encoding for the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 4. Ensures proper responsive scaling on different devices -->
     <title>Galentine's E-Card</title> <!-- 5. Sets the title of the webpage -->
-    <____ rel="_______" href="css/style.css"> <!-- 6. Links an external CSS file for styling -->
+    <link rel ="stylesheet" href="css/style.css"> <!-- 6. Links an external CSS file for styling -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="______-_______"> <!-- 7. Creates a container to center the envelope -->
-        <____ src="image/envelope.png" class="envelope" __="Click to create an E-Card" onclick=”___________()"> 
+    <div class="envelope-container"> <!-- 7. Creates a container to center the envelope -->
+        <img src ="image/envelope.png" class="envelope" alt="Click to create an E-Card" onclick="openEnvelope()"> 
         <!-- 8. Displays an envelope image that users click to open the e-card, triggering the JavaScript function openEnvelope() -->
     </div>
 
@@ -16,15 +19,14 @@
          There needs to be an area for the e-card message! 
          Add a div below with a class name that suggests it's the card content. -->
 
-    <___ class="____"> 
+    <div class="e-card-message"> 
         <!-- This is where the e-card message will appear! -->
-        <p>____</p> <!-- Fill in this blank with a placeholder message like "Happy Galentine's Day!" -->
+        <p></p> <!-- Fill in this blank with a placeholder message like "Happy Galentine's Day!" -->
     </div>
 
-    <!-- Challenge Hint #2: We need JavaScript to handle interactions! 
-         Below, a script file is already linked. What do you think it controls? -->
 
-    <_____ src="js/script.js"></_____> <!-- 9. Links an external JavaScript file for interactivity -->
+
+    <script  src="js/script.js"></script> <!-- 9. Links an external JavaScript file for interactivity -->
 </body>
 </html>
 
